--- a/index.html
+++ b/index.html
@@ -349,12 +349,12 @@
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
             </div>
-            <div class="gallery-item">
+            <!-- <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-14.jpg" alt="">
                 <a href="img/gallery-14.jpg" data-lightbox="gallery">
                     <i class="fa fa-2x fa-plus text-white"></i>
                 </a>
-            </div>
+            </div> -->
             <div class="gallery-item">
                 <img class="img-fluid w-100" src="img/gallery-15.jpg" alt="">
                 <a href="img/gallery-15.jpg" data-lightbox="gallery">
@@ -382,8 +382,8 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
-                    <h5 class="font-weight-normal text-muted mb-3 pb-3">“Destiny brought them together and now love will
-                        seal their bond...forever”
+                    <h5 class="font-weight-normal text-muted mb-3 pb-3">“Destiny brought us together and now love will
+                        seal our bond...forever”
                         With the blessings of the God, we cordially request the pleasure of your presence
                         with family on the auspicious occasion of my marriage.
                     </h5>
@@ -398,7 +398,7 @@
             <div class="row">
                 <div class="col-md-6 border-right border-primary">
                     <button class="btn btn-primary font-weight-bold py-3 px-5 width-100" type="submit"
-                    onclick="window.open('DOC-20220820-WA0009.pdf')">Download Sumuhurtham</button>
+                    onclick="window.open('LagnaPatrika.pdf')">Download Lagna Patrika</button>
                     <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
                         <img class="img-fluid mb-4" src="img/event-1.jpg" alt="">
                         <h4 class="mb-3">Sumuhurtham</h4>
